basic version finished

--- a/index.html
+++ b/index.html
@@ -14,30 +14,30 @@
           <img src="night-mode.png" alt="Toggle theme" />
         </div>
       </div>
-      <input type="text" class="type" placeholder="0" autofocus />
+      <input type="text" class="type" autofocus />
       <div class="row">
         <button class="opbr btn nonNum">(</button>
         <button class="clbr btn nonNum">)</button>
         <button class="clearAll btn nonNum">AC</button>
-        <button class="divide btn nonNum operator">&divide;</button>
+        <button class="divide btn nonNum operator">/</button>
       </div>
       <div class="row">
         <button class="one btn num">1</button>
         <button class="two btn num">2</button>
         <button class="three btn num">3</button>
-        <button class="multiply btn nonNum operator">&times;</button>
+        <button class="multiply btn nonNum operator">*</button>
       </div>
       <div class="row">
         <button class="four btn num">4</button>
         <button class="five btn num">5</button>
         <button class="six btn num">6</button>
-        <button class="minus btn nonNum operator">&#45;</button>
+        <button class="minus btn nonNum operator">-</button>
       </div>
       <div class="row">
         <button class="seven btn num">7</button>
         <button class="eight btn num">8</button>
         <button class="nine btn num">9</button>
-        <button class="add btn nonNum operator">&#43;</button>
+        <button class="add btn nonNum operator">+</button>
       </div>
       <div class="row">
         <button class="zero btn num">0</button>
